# ollama-python

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini  verify_fix.py
.codeboarding/: API_Client_Core.md  Data_Transformation_Utilities.md  HTTP_Communication_Layer.md  Ollama_API_Endpoints.md  Request_Response_Data_Models.md  on_boarding.md
.github/: dependabot.yml
.github/workflows/: ci-matrix.yml  publish.yaml  ruff.yml  test.yaml
examples/: README.md  async-chat.py  async-generate.py  async-list.py  async-ps.py  async-structured-outputs.py  async-thinking.py  async-tools-decorators.py  async-tools.py  benchmark-models.py  browser_tool.py  browser_tool_helpers.py  chat-logprobs.py  chat-stream.py  chat-with-history.py  chat.py  create.py  cross-validated-search.py  embed.py  embedWithChromaDB.py  fill-in-middle.py  generate-image.py  generate-logprobs.py  generate-stream.py  generate-with-options.py  generate.py  gpt-oss-browser-tool.py  gpt-oss-tools-browser-stream.py  gpt-oss-tools-browser.py  gpt-oss-tools-stream.py  gpt-oss-tools.py  gpt_oss_browser_tool_helper.py  list.py  live_ollama_cli.py  mcp-web-search-and-fetch.py  mcp_web_search_crawl_server.py  multi-tool.py  multi_agent_system.py  multimodal-chat.py  multimodal-generate.py  (+24 more)
examples/asking-several-models/: README.md  main.py
examples/async-chat-stream/: README.md  main.py
examples/chat/: main.py
examples/chat-continuous/: main.py
examples/chat-history/: main.py
examples/chat-iterative/: main.py
examples/chat-stream-history/: main.py
examples/chat-stream-iterative/: main.py
examples/create/: create.py
examples/fill-in-middle/: main.py
examples/list/: list.py  main.py
examples/multimodal/: image_description.py  multimodal-generate.py
examples/ps/: main.py  show.py
examples/pull-progress/: README.md  main.py  requirements.txt
examples/pull-stream-progress/: main.py
examples/reproducible-outputs/: README.md  main.py
examples/simple-chat/: main.py
examples/simple-chat-stream/: main.py
examples/simple-fill-in-middle/: main.py
examples/simple-generate/: main.py
examples/simple-generate-stream/: main.py
examples/simple-multimodal/: main.py
examples/structured_outputs/: async-structured-outputs.py  structured-outputs.py
examples/thinking/: thinking-generate.py  thinking.py
examples/tool-functions/: main.py
examples/tools/: README.md  gpt-oss-tools-stream.py  main.py
ollama/: __init__.py  __main__.py  _auth.py  _client.py  _decorator.py  _errors.py  _json_type_map.py  _toolfuncs.py  _tools.py  _types.py  _utils.py  client.py  client_test.py
ollama/tool_calling/: __init__.py  _utils.py
tests/: test_auth.py  test_cli.py  test_client.py  test_exists.py  test_json_type_map.py  test_live.py  test_model_parsing.py  test_stability.py  test_toolfuncs.py  test_tools.py  test_type_serialization.py  test_utils.py  test_utils_legacy.py
